[package]
name = "signet-orders"
version = "0.1.0"
description = "signet orders examples"
edition = "2024"
rust-version = "1.89"
authors = ["init4"]
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/init4tech/signet-orders"
repository = "https://github.com/init4tech/signet-orders"

[lib]
name = "orders"

[[bin]]
name = "order-roundtrip-example"
path = "bin/roundtrip.rs"

[[bin]]
name = "submit_order"
path = "bin/submit_order.rs"

[[bin]]
name = "submit_transaction"
path = "bin/submit_transaction.rs"

[dependencies]
init4-bin-base = { version = "0.18.0-rc.0", features = ["alloy", "aws"] }

signet-constants =  { version = "0.16.0-rc.1" }
signet-zenith =  { version = "0.16.0-rc.1" }
signet-types =  { version = "0.16.0-rc.1" }
signet-tx-cache =  { version = "0.16.0-rc.1" }
signet-bundle =  { version = "0.16.0-rc.1" }

alloy = { version = "1.0.35", features = [
    "full",
    "json-rpc",
    "signer-aws",
    "rpc-types-mev",
    "rlp",
    "node-bindings",
    "serde",
] }

clap = { version = "4.5.41", features = ["derive"] }
chrono = "0.4.38"
eyre = "0.6.12"
reqwest = { version = "0.12.22", features = ["rustls-tls-native-roots", "json"]}
tokio = { version = "1.36.0", features = ["full", "macros", "rt-multi-thread"] }
tracing = "0.1.40"
futures = "0.3"